<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:background="@drawable/item_border"
        android:padding="12dp">


        <TextView
            android:id="@+id/bin"
            style="@style/text_titles_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/history_bin"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemBIN"
            style="@style/text_cards_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/bin"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0000 0000" />

        <TextView
            android:id="@+id/scheme"
            style="@style/text_titles_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_scheme"
            android:textAllCaps="true"
            app:layout_constraintEnd_toStartOf="@id/itemScheme"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemScheme"
            style="@style/text_cards_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Visa" />

        <TextView
            android:id="@+id/bankName"
            style="@style/text_titles_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_bank_name"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bin" />

        <TextView
            android:id="@+id/itemBankName"
            style="@style/text_cards_info_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/bankName"
            app:layout_constraintBaseline_toBaselineOf="@id/bankName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bin"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Jyske Bank" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>